--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ description = "A horrid macro for making mutables of X size"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
+repository="https://github.com/tascord/mutable_x"
 
 [lib]
 proc-macro = true
